1.17.5
- Added new "Laser Cannon" tool
- Improved behavior of lamps under extreme conditions:
	- At great ocean depths
	- When subject to electric sparks
	- When their power generator is flooded
- Added Ukrainian translation - thanks to Roman Shavernew (Dioxcode)!

1.17.4
- Improved "Ship Load" window, allowing to sort by different attributes, and allowing to load ships flipped and/or rotated
- Small user interface changes here and there, mostly to improve experience on Windows 11
- Fixed bug which would cause ships to explode when increasing the "strength adjustment" setting
- Fixed sporadic ShipBuilder crash while the Ropes tool was setup with "no rope" material
- Added one new ship, "Steffinton Class Hovercraft" - by Pocketwatch
- Added new background music track, "Nightmare" - by Kukan Effect (https://kukaneffect.bandcamp.com/)

1.17.3
- Added Jet Engines
	- Not really "ship" stuff, but essential to a physics simulator nonetheless :-)
	- Two types of engines:
		- Jet Engine: provides main propulsion
		- Jet Thrust Engine: provides short bursts to correct small directional deviations
	- ...and two engine controllers:
		- Jet Engine Throttle Controller: best for controlling Jet engines
		- Jet Engine Thrust Controller: best for controlling Jet Thrust engines
	- Check out the new Air Boat and Rocket ships to see these engines in action!
- Re-designed interaction between engine controllers and engines, allowing a controller to run an unlimited number of engines
	- Introduced new "Engine Transmission" electrical material that may be used to connect engine controllers with engines at a distance
- Added auto-focus - for cinematic awesomeness
	- May be turned off and on via the Control menu or by pressing Ctrl+HOME
- Added "Stress Overlay" view mode, showing structure stress as a heatmap
	- Among other things, it allows for stress-testing your model and understanding where structural weaknesses are
- Added lightning hit probability setting 