@@ -98,18 +98,18 @@ void CreditsPanel::RenderCredits(wxSize panelSize)
         {0, _("TRANSLATION"), 0},
         {1, wxS("Gabriele Giuseppini (Italian)"), 0},
         {1, wxS("Ilya Voloshin (https://vk.com/1lvol) (Russian)"), 0},
-        {1, wxS("Roman Shavernew (DioxCode) (Russian)"), 0},
+        {1, wxS("Roman Shavernew (DioxCode) (Russian, Ukrainian)"), 0},
         {1, wxS("Joaquin Olivera (Joadix100) (Spanish)"), VMargin3},
 
         {0, _("BUILD ENGINEERING"), 0},
         {1, wxS("The_SamminAter (macOS)"), 0},
         {1, wxS("Daniel Tammeling (linux)"), VMargin3},
 
-        {0, _("SHIP ENGINEERING"), 0},                
+        {0, _("SHIP ENGINEERING"), 0},
         {2, wxS("Matthew Anderson    DennisDanielGrimaldo    blue_funnel    Charles Calvin    Denis"), 0},
         {2, wxS("TopHatLemons    Truce#3326    RetroGraczzPL    Nomadavid    Wreno    R.M.S. Atlantic"), 0},
         {2, wxS("Albert Windsor    Takara    Rockabilly Rebel    McShooter2018    sinking_feeling    braun"), 0},
-        {2, wxS("Dumbphones    NotTelling    Hugo_2503    _ASTYuu_    Serhiiiihres    CPM    Pocketwatch"), 0},                
+        {2, wxS("Dumbphones    NotTelling    Hugo_2503    _ASTYuu_    Serhiiiihres    CPM    Pocketwatch"), 0},
         {2, wxS("Pac0master    CorbinPasta93    Yorkie    Bluefox    KikoTheBoatBuilder    Raynair    Menta1ity"), 0},
         {2, wxS("MasterGarfield    Aur\xe9lien WOLFF    Alex di Roma    2017 Leonardo    FER ZCL    AvSimplified"), 0},
         {2, wxS("Pandadude12345    John Smith    Dkuz    Loree    Daewoom    Aqua    Arkstar_    BeamierBoomer"), 0},
